# lazyfood

./: Cargo.toml  README.md
lazyfood/: Cargo.toml
lazyfood/src/: main.rs
lazyfood_lib/: Cargo.toml
lazyfood_lib/src/: compat.rs  error.rs  lib.rs
lazyfood_lib/src/backend/: donerking.rs  mod.rs
lazyfood_lib/src/dto/: address.rs  dish.rs  identity.rs  menu.rs  mod.rs  order.rs
