[package]
name = "lazyfood_lib"
version = "0.1.0"
authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
edition = "2018"

[dependencies]
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.3", features = ["cookies", "gzip", "brotli"] }
select = "0.5.0"
derive_more = { version = "0.99.14", default-features = false, features = ["display"] }
validator = { version = "0.13.0", features = ["derive", "phone"] }
rusty-money = "0.4.1"
chrono = "0.4.19"
