[package]
name = "lazyfood_lib"
version = "0.1.0"
authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
edition = "2018"

[dependencies]
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.3", features = ["cookies", "json", "gzip", "brotli"] }
select = "0.5.0"
validator = { version = "0.13.0", features = ["derive", "phone"] }
rusty-money = "0.4.1"
chrono = "0.4.19"
smallstr = "0.2.0"
chrono-tz = "0.5.3"
getset = "0.1.1"
regex = "1.5.4"
lazy_static = "1.4.0"
serde_json = "1.0.64"
