[package]
name = "lazyfood_lib"
version = "0.1.0"
authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
edition = "2018"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["cookies", "json", "gzip", "brotli"] }
select = "0.5"
validator = { version = "0.13", features = ["derive", "phone"] }
rusty-money = { git = "https://github.com/Logarithmus/rusty_money", branch = "serde", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
getset = "0.1"
regex = "1"
lazy_static = "1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
